<resources>
    <string name="app_name">Weather</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="wi_windy" translatable="false">&#xf021;</string>
    <string name="wind_sped">&#xf050;</string>
    <string name="wind">Wind</string>
    <string name="humidity_val" translatable="false"> &#xf07a;</string>
    <string name="humidity">humidity</string>
    <string name="city">"City"</string>
    <string name="temperature" translatable="false">10 ℃</string>
    <string name="weather" translatable="false">weather</string>
    <string name="Button_select">Select</string>
    <string name="input_city">input city</string>
    <string name="pressure">Pressure</string>
    <string name="Theme">Theme:</string>
    <string name="_24_hour_format">24 - hour format</string>
    <string name="use_gps">Use GPS</string>
    <string name="send_statistics">Send statistics</string>
    <string name="No_city_set">No city set</string>
    <string name="www" translatable="false">WWW</string>
    <string name="hist">History</string>
    <string name="add">Add</string>
    <string name="new_city">new city</string>
    <string name="hist_">Hist…</string>
    <string name="city_add">City added</string>
    <string name="Cancel">Cancel</string>
    <string name="title_home">home</string>
    <string name="titl_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="error_get_data">Error get data</string>
    <string name="error">Error</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="City_Selection">City Selection</string>
    <string name="Hist">History</string>
    <string name="search">Search</string>
    <string name="ok" translatable="false">OK</string>
    <string name="get_weather">Get weather</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="no_data_click_add">no data, click add</string>
    <string name="no_data">No data</string>
    <string name="low_bat">Low battery</string>
    <string name="no_network">" No network"</string>


    <string-array name="theme">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="network_connected">network connected</string>
    <string name="notifications">Notifications</string>
    <string name="my_location">My location</string>
    <string name="map">Map</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="current_location">Current location</string>
</resources>
