<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_hist"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/hist" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/titl_settings" />

        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_about" />

    </group>
</menu>