<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor">

    <ImageView
        android:id="@+id/iм_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city"
        style="@style/weather_img"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_wi_day_lightning" />

    <TextView
        android:id="@+id/tv_temperature"
        style="@style/weather_temper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/iм_weather"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/iм_weather"
        app:layout_constraintTop_toBottomOf="@+id/iм_weather"
        tools:text="@string/temperature" />

    <TextView
        android:id="@+id/tv_wind"
        style="@style/weather_wind_hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_humidity"
        app:layout_constraintStart_toStartOf="@+id/tv_temperature"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
        app:layout_constraintVertical_bias="0.047"
        tools:text="@string/wind_sped" />

    <TextView
        android:id="@+id/tv_humidity"
        style="@style/weather_wind_hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind"
        app:layout_constraintEnd_toEndOf="@+id/tv_temperature"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_wind"
        app:layout_constraintTop_toTopOf="@+id/tv_wind"
        tools:text="@string/humidity_val" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:text="@string/city"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:id="@+id/ib_hist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/hist_"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_temperature"
        app:layout_constraintTop_toBottomOf="@+id/iм_weather" />


</androidx.constraintlayout.widget.ConstraintLayout>