<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/weathericons"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/icon_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_city"
                tools:text="@string/weather_clear_night" />


            <TextView
                android:id="@+id/tv_temperature"
                style="@style/weather_temper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_icon"
                tools:text="10 ℃" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/weather_wind_hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_humidity"
                app:layout_constraintStart_toStartOf="@+id/tv_temperature"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
                app:layout_constraintVertical_bias="0.047"
                tools:text="@string/wind_sped" />

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/weather_wind_hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_wind"
                app:layout_constraintEnd_toEndOf="@+id/tv_temperature"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_wind"
                app:layout_constraintTop_toTopOf="@+id/tv_wind"
                tools:text="@string/humidity_val" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:text="@string/city"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="City" />

            <com.example.android_begin.TemperatureView
                android:id="@+id/tv_view"
                android:layout_width="68dp"
                android:layout_height="190dp"
                android:background="#009688"
                app:layout_constraintBottom_toBottomOf="@+id/tv_temperature"
                app:layout_constraintEnd_toStartOf="@+id/tv_temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_icon"
                app:value="50" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/error"
            layout="@layout/v_error"
            android:visibility="gone" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
